--- a/id2208Project/pom.xml
+++ b/id2208Project/pom.xml
@@ -20,10 +20,10 @@
 				</executions>
 				<configuration>
 					<mainClass>id2208Project.Application</mainClass>
-<!-- 					<arguments> -->
-<!-- 						<argument>foo</argument> -->
-<!-- 						<argument>bar</argument> -->
-<!-- 					</arguments> -->
+					<!-- <arguments> -->
+					<!-- <argument>foo</argument> -->
+					<!-- <argument>bar</argument> -->
+					<!-- </arguments> -->
 				</configuration>
 			</plugin>
 			<plugin>
@@ -49,6 +49,11 @@
 			<groupId>org.ow2.easywsdl</groupId>
 			<artifactId>easywsdl-wsdl</artifactId>
 			<version>2.3</version>
+		</dependency>
+		<dependency>
+			<groupId>com.predic8</groupId>
+			<artifactId>soa-model-core</artifactId>
+			<version>1.5.0</version>
 		</dependency>
 
 	</dependencies>
