--- a/id2208Project/pom.xml
+++ b/id2208Project/pom.xml
@@ -21,6 +21,10 @@
 				<configuration>
 					<mainClass>id2208Project.Application</mainClass>
 					<!-- <arguments> -->
+					<!-- <arguemnt>path1</arguemnt> -->
+					<!-- <argument>path2</argument> -->
+					<!-- </arguments> -->
+					<!-- <arguments> -->
 					<!-- <argument>foo</argument> -->
 					<!-- <argument>bar</argument> -->
 					<!-- </arguments> -->
@@ -55,7 +59,11 @@
 			<artifactId>soa-model-core</artifactId>
 			<version>1.5.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.ow2.easywsdl</groupId>
+			<artifactId>easywsdl-ext-sawsdl</artifactId>
+			<version>2.1</version>
+		</dependency>
 	</dependencies>
 
 </project>
